fixed mobile horizontal scrollbar bug

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -216,6 +216,7 @@ hr {
 
 @media screen and (max-width: 1000px) {
     input:not([type=checkbox],[type=radio]), button {
-        width:100%;   
+        width:100%;
+        margin-right: 0;
     }
 }
